[gd_scene load_steps=4 format=3 uid="uid://btfsxi88uoqbd"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_ox0m5"]

[sub_resource type="Animation" id="Animation_o2448"]
resource_name = "game_saved"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("game_saved_container/game_saved:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hs40v"]
_data = {
"game_saved": SubResource("Animation_o2448")
}

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
layer = 5
visible = false
script = ExtResource("1_ox0m5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hs40v")
}

[node name="fond" type="ColorRect" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 1016.0
color = Color(0, 0, 0, 0.415686)

[node name="game_saved_container" type="VBoxContainer" parent="."]
offset_left = 72.0
offset_top = 72.0
offset_right = 1848.0
offset_bottom = 1008.0
alignment = 2

[node name="game_saved" type="Label" parent="game_saved_container"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "GAME SAVED"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -272.0
offset_right = 324.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="pause" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Pause"
horizontal_alignment = 1

[node name="save_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Save game
"

[node name="load_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Load game
"

[node name="title_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Return to title
"

[node name="desktop_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Return to desktop
"
